# pkg/controllers/roomtype.go
@@ -1,9 +1,16 @@
 package controllers
 
 import (
+	"context"
+	"mime/multipart"
 	"net/http"
+	"sync"
 
+	"github.com/aws/aws-sdk-go-v2/aws"
+	"github.com/aws/aws-sdk-go-v2/feature/s3/manager"
+	"github.com/aws/aws-sdk-go-v2/service/s3"
 	"github.com/labstack/echo/v4"
+	"github.com/spf13/viper"
 
 	"github.com/lovehotel24/room-service/pkg/routers"
 )
@@ -95,4 +102,57 @@ func (a API) UpdateRoomTypeById(ctx echo.Context, roomTypeId string) error {
 
 	a.Log.Infof("room type updated with id: %s", rt.Id)
 	return ctx.JSON(http.StatusOK, rt.Id)
+}
+
+type UploadResult struct {
+	Location string
+	Error    error
+}
+
+func (a API) UploadRoomTypePhotos(ctx echo.Context) error {
+	form, err := ctx.MultipartForm()
+	if err != nil {
+		a.Log.WithError(err).Errorf("failed to upload photos: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "failed to upload photos")
+	}
+
+	photos := form.File["photos"]
+	results := make(chan UploadResult, len(photos))
+	var wg sync.WaitGroup
+	for _, file := range photos {
+		wg.Add(1)
+
+		go func(file *multipart.FileHeader) {
+			defer wg.Done()
+			src, err := file.Open()
+			if err != nil {
+				results <- UploadResult{Error: err}
+				return
+			}
+			defer src.Close()
+
+			uploader := manager.NewUploader(a.S3)
+			result, err := uploader.Upload(context.TODO(), &s3.PutObjectInput{
+				Bucket: aws.String(viper.GetString("bucket")),
+				Key:    aws.String(file.Filename),
+				Body:   src,
+			})
+			if err != nil {
+				results <- UploadResult{Error: err}
+				return
+			}
+			results <- UploadResult{Location: result.Location, Error: nil}
+		}(file)
+	}
+	wg.Wait()
+	close(results)
+	var uploadedFiles []string
+	for result := range results {
+		if result.Error != nil {
+			a.Log.Error(result.Error)
+		}
+		uploadedFiles = append(uploadedFiles, result.Location)
+	}
+
+	return ctx.JSON(http.StatusOK, uploadedFiles)
 }
